--- a/html/MichaelDennisPhotographyWhite.html
+++ b/html/MichaelDennisPhotographyWhite.html
@@ -121,6 +121,14 @@
     border-color:#000000;
     border-spacing: 10px 10px;
   }
+  .containerRightWb {
+    position: relative;
+    text-align: Left;
+    color: white;
+    position: absolute;
+    left: 55%;
+
+  }
   .containerRight {
     position: relative;
     text-align: Left;
@@ -128,7 +136,14 @@
     position: absolute;
     left: 60%;
   }
+  .containerLeftNb {
+    position: relative;
+    text-align: center;
+    color: white;
+    position: absolute;
+    left: 0%;
 
+  }
   /* Centered text */
   /*https://www.cssfontstack.com/Helvetica-Neue*/
   .centeredHeader {
@@ -142,6 +157,7 @@
     font-variant: normal;
     font-weight: 700;
     line-height: 26.4px;
+    color: #ffffff;
   }
   .centeredh2 {
     position: absolute;
@@ -154,24 +170,24 @@
     font-variant: normal;
     font-weight: 500;
     line-height: 26.4px;
+    color: #ffffff;
   }
 
 }
 </style>
 </head>
-
-<body class="em_body" style="margin:0px; padding:0px;" bgcolor="#ffffff">
-  <table class="em_full_wrap" valign="top" width="100%" cellspacing="0" cellpadding="0" border="0" bgcolor="#ffffff" align="center">
+<body class="em_body" style="margin:0px; white-space: nowrap; padding:0px;" bgcolor="#000000">
+  <table class="em_full_wrap" valign="top" width="100%" cellspacing="0" cellpadding="0" border="0" bgcolor="#efefef" align="center">
     <tbody><tr>
       <td valign="top" align="center"><table class="em_main_table" style="width:700px;" width="700" cellspacing="0" cellpadding="0" border="0" align="center">
         <!--Header section-->
         <tbody>
           <tr>
-            <td style="padding:15px;" class="em_padd" valign="top" bgcolor="#ffffff" align="center">
+            <td style="padding:15px;"class="em_padd" valign="top" bgcolor="#ffffff" align="center">
               <table width="100%" cellspacing="0" cellpadding="0" border="0" align="center">
                 <tbody>
                   <tr>
-                    <td style="font-family:'Open Sans', Arial, sans-serif; font-size:12px; line-height:15px; color:#0d1121;" valign="top" align="center">Michael Dennis Photography | <a href="https://michaeldennisphotography.zenfolio.com/" target="_blank" style="color:#0d1121; text-decoration:underline;">View Online</a></td>
+                    <td style="font-family:'Helvetica Neue';  font-size:12px; line-height:15px; color:#000000;" valign="top" align="center">Michael Dennis Photography | <a href="https://michaeldennisphotography.zenfolio.com/" target="_blank" style="color:#000000; text-decoration:underline;">View Website</a></td>
                   </tr>
                 </tbody>
               </table>
@@ -183,12 +199,11 @@
             <td valign="top" align="center">
               <table width="100%" cellspacing="0" cellpadding="0" border="0" align="center">
                 <tbody><tr>
-
                   <td valign="top" align="center">
                     <div class="container">
-                      <img class="em_img" alt="Michael Dennis Photography" style="display:block; font-family:Arial, sans-serif; font-size:30px; line-height:34px; color:#000000; max-width:700px;" src="https://ianconraddennis.github.io/html/AD15full.jpg" width="700" border="0" height="345">
-                      <div class="centeredHeader">GET NOTICED.</div>
-                      <div class="centeredh2">Get better imagery.</div>
+                      <img class="em_img" alt="Michael Dennis Photography" style="display:block; font-family:Arial, sans-serif; font-size:30px; line-height:34px; color:#ffffff; max-width:700px;" src="https://ianconraddennis.github.io/html/AD15full.jpg" width="700" border="0" height="233">
+                      <div class="centeredHeader" style="text-shadow: 4px 4px #000000;">GET NOTICED.</div>
+                      <div class="centeredh2" style="text-shadow: 4px 4px #000000;"><br/>Get better imagery.</div>
                     </div>
                   </td>
                 </tr>
@@ -203,20 +218,20 @@
             <table width="100%" cellspacing="0" cellpadding="0" border="0" align="center">
               <tbody>
                 <tr>
-                  <td style="font-family:'Helvetica Neue'; font-weight: 100; font-size:20px; line-height:30px; color:#000000;" valign="top" align="center">Professional quality photography helps attract new golfers to your course,creating return customers and building new revenue streams.</td>
+                  <td style="font-family:'Helvetica Neue'; font-weight: 100; font-size:20px; line-height:30px; color:#ffffff;" valign="top" align="center">&nbsp;Professional quality photography helps attract new golfers to your&nbsp;<br/>&nbsp;course,creating return customers and building new revenue streams.&nbsp;</td>
                 </tr>
                 <tr>
                   <td style="font-size:0px; line-height:0px; height:15px;" height="15">&nbsp;</td>
                   <!--—this is space of 15px to separate two paragraphs ---->
                 </tr>
-                <tr valign="middle">
+                <tr >
                   <td>
                     <div class="container">
-                      <div class="containerLeft">
-                        <p style="font-family:'Helvetica Neue'; font-size:18px; line-height:28px; color:#000000; letter-spacing:2px; padding-bottom:16px;" valign="top" align="center">&nbsp;97% of golfers are going online&nbsp;<br/>&nbsp;to look at photos before they&nbsp;<br/>&nbsp;book a round...&nbsp;</p>
+                      <div class="containerLeft" valign="middle">
+                        <p style="font-family:'Helvetica Neue'; font-size:18px; line-height:28px; color:#000000; letter-spacing:2px; padding-bottom:16px;" valign="center" align="center">&nbsp;97% of golfers are going online&nbsp;<br/>&nbsp;to look at photos before they&nbsp;<br/>&nbsp;book a round...&nbsp;</p>
                       </div>
-                      <div class="containerRight">
-                        <img class="em_img" alt="Michael Dennis Photography" style="display:block; font-family:Arial, sans-serif; font-size:30px; line-height:34px; color:#000000; max-width:175px;" src="https://ianconraddennis.github.io/html/1.jpg" width="175" border="0" height="154">
+                      <div class="containerRight" valign="top">
+                        <img class="em_img" alt="Michael Dennis Photography" style="display:block; font-family:Arial, sans-serif; font-size:30px; line-height:34px; color:#ffffff; max-width:175px;" src="https://ianconraddennis.github.io/html/1.jpg" width="175" border="0" height="154">
                       </div>
                     </div>
                   </td>
@@ -233,10 +248,11 @@
                   <td>
                     <div class="container">
                       <div class="containerLeft">
-                        <p style="font-family:'Helvetica Neue'; font-size:18px; line-height:28px; color:#000000; letter-spacing:2px; padding-bottom:16px;" valign="top" align="center">&nbsp;...And 62% of golfers say that&nbsp;<br/>&nbsp;quality photography weighson&nbsp;<br/>&nbsp;their decision to play a course.&nbsp;</p>
+
+                          <p style="font-family:'Helvetica Neue'; font-size:18px; line-height:28px; color:#000000; letter-spacing:2px; padding-bottom:16px;" valign="center" align="center">&nbsp;...And 62% of golfers say that&nbsp;<br/>&nbsp;quality photography weighson&nbsp;<br/>&nbsp;their decision to play a course.&nbsp;</p>
                       </div>
                       <div class="containerRight">
-                        <img class="em_img" alt="Michael Dennis Photography" style="display:block; font-family:Arial, sans-serif; font-size:30px; line-height:34px; color:#000000; max-width:252px;" src="https://ianconraddennis.github.io/html/2.jpg" width="252" border="0" height="154">
+                        <img href="https://ianconraddennis.github.io/html/2.jpg" class="em_img" alt="Michael Dennis Photography" style="display:block; font-family:Arial, sans-serif; font-size:30px; line-height:34px; color:#ffffff; max-width:252px;" src="https://ianconraddennis.github.io/html/2.jpg" width="252" border="0" height="154">
                       </div>
                     </div>
                   </td>
@@ -249,38 +265,54 @@
                   <td class="em_h20" style="font-size:0px; line-height:0px; height:25px;" height="50">&nbsp;</td>
                   <!--—this is space of 25px to separate two paragraphs ---->
                 </tr>
+                <tr valign="middle">
+                  <td>
+                    <div class="container">
+                      <div class="containerLeftNb">
+                        <p style="font-family:'Helvetica Neue'; font-size:18px; line-height:28px; color:#000000; letter-spacing:2px; padding-bottom:16px;" valign="center" align="center">&nbsp;Curent online photo:&nbsp;</p>
+                        <img class="em_img" alt="Michael Dennis Photography" style="display:block; font-family:Arial, sans-serif; font-size:30px; line-height:34px; color:#ffffff; max-width:252px;" src="https://ianconraddennis.github.io/html/nal.jpg" width="252" border="0" height="154">
+                        <p style="font-family:'Helvetica Neue'; font-size:18px; line-height:28px; color:#000000; letter-spacing:2px; padding-bottom:16px;" valign="center" align="center"><br/>&nbsp;Professionaly shot:&nbsp;</p>
+                        <img class="em_img" alt="Michael Dennis Photography" style="display:block; font-family:Arial, sans-serif; font-size:30px; line-height:34px; color:#ffffff; max-width:252px;" src="https://ianconraddennis.github.io/html/NAL16.jpg" width="252" border="0" height="154">
+                      </div>
+                      <div class="containerRightWb"><br/><br/>
+                      <p style="font-family:'Helvetica Neue'; font-size:24px; line-height:28px; color:#000000; letter-spacing:2px; padding-bottom:16px;" valign="center" align="center"><br/><br/><br/><br/><br/>&nbsp;You don't need to be&nbsp;<br/>&nbsp;a top 100 course&nbsp;<br/>&nbsp;to have world-class&nbsp;<br/>&nbsp;photography.&nbsp;</p>
+                      </div>
+                    </div>
+                  </td>
+                </tr>
                 <tr>
-                  <td style="font-family:'Open Sans', Arial, sans-serif; font-size:18px; line-height:22px; color:#fbeb59; text-transform:uppercase; letter-spacing:2px; padding-bottom:12px;" valign="top" align="center"> This is paragraph 3 of font size 18px and #fbeb59 font color with a line spacing of 25px and Uppercase</td>
+                  <td class="em_h20" style="font-size:0px; line-height:0px; height:425px;" height="425">&nbsp;</td>
+                  <!--—this is space of 25px to separate two paragraphs ---->
+                </tr>
+                <tr>
+                  <td style="font-family:'Helvetica Neue'; font-size:18px; line-height:22px; color:#000000; text-transform:uppercase; letter-spacing:2px; padding-bottom:12px;" valign="top" align="center">Michael Dennis Photography</td>
                 </tr>
               </tbody>
             </table>
           </td>
         </tr>
-
         <!--//Content Text Section-->
         <!--Footer Section-->
         <tr>
-          <td style="padding:38px 30px;" class="em_padd" valign="top" bgcolor="#ffffff" align="center"><table width="100%" cellspacing="0" cellpadding="0" border="0" align="center">
+          <td style="padding:38px 30px;" class="em_padd" valign="top" bgcolor="#A9A9A9" align="center"><table width="100%" cellspacing="0" cellpadding="0" border="0" align="center">
             <tbody><tr>
-              <td style="padding-bottom:16px;" valign="top" align="center"><table cellspacing="0" cellpadding="0" border="0" align="center">
-                <tbody><tr>
-                  <td valign="top" align="center"><a href="#" target="_blank" style="text-decoration:none;"><img src="images/fb.png" alt="fb" style="display:block; font-family:Arial, sans-serif; font-size:14px; line-height:14px; color:#000000; max-width:26px;" width="26" border="0" height="26"></a></td>
+              <td style="padding-bottom:16px; font-family:'Helvetica Neue'" valign="top" align="center"><table cellspacing="0" cellpadding="0" border="0" align="center">Connect to find out more:<br/>
+                <tbody><tr></tr><tr>
+                  <td valign="top" align="center"><a href="https://www.instagram.com/michaeldennisphotography/" target="_blank" style="text-decoration:none;"><img src="https://ianconraddennis.github.io/html/app-icon2.png" alt="instagram: michaeldennisphotography" style="display:block; font-family:Arial, sans-serif; font-size:14px; line-height:14px; color:#000000; max-width:26px;" width="26" border="0" height="26"></a></td>
                   <td style="width:6px;" width="6">&nbsp;</td>
-                  <td valign="top" align="center"><a href="#" target="_blank" style="text-decoration:none;"><img src="images/tw.png" alt="tw" style="display:block; font-family:Arial, sans-serif; font-size:14px; line-height:14px; color:#000000; max-width:27px;" width="27" border="0" height="26"></a></td>
+                  <td valign="top" align="center"><a href="https://michaeldennisphotography.zenfolio.com/" target="_blank" style="text-decoration:none;"><img src="https://ianconraddennis.github.io/html/1034609.svg" alt="tw" style="display:block; font-family:Arial, sans-serif; font-size:14px; line-height:14px; color:#000000; max-width:27px;" width="27" border="0" height="26"></a></td>
                   <td style="width:6px;" width="6">&nbsp;</td>
-                  <td valign="top" align="center"><a href="#" target="_blank" style="text-decoration:none;"><img src="images/yt.png" alt="yt" style="display:block; font-family:Arial, sans-serif; font-size:14px; line-height:14px; color:#000000; max-width:26px;" width="26" border="0" height="26"></a></td>
+                  <td valign="top" align="center"><a href="mailto:michaeldennisphotography@gmail.com?Subject=Golf%20photo%20inquiry" target="_blank" style="text-decoration:none;"><img src="https://ianconraddennis.github.io/html/35929070-stock-vector-email-icon-on-blue-background-clean-vector.jpg" alt="yt" style="display:block; font-family:Arial, sans-serif; font-size:14px; line-height:14px; color:#000000; max-width:26px;" width="26" border="0" height="26"></a></td>
                 </tr>
               </tbody></table></td>
             </tr>
             <tr>
-              <td style="font-family:'Open Sans', Arial, sans-serif; font-size:11px; line-height:18px; color:#999999;" valign="top" align="center"><a href="#" target="_blank" style="color:#999999; text-decoration:underline;">PRIVACY STATEMENT</a> | <a href="#" target="_blank" style="color:#999999; text-decoration:underline;">TERMS OF SERVICE</a> | <a href="#" target="_blank" style="color:#999999; text-decoration:underline;">RETURNS</a><br>
-                © 2017 Companyname. All Rights Reserved.<br>
-                If you do not wish to receive any further emails from us, please <a href="#" target="_blank" style="text-decoration:none; color:#999999;">unsubscribe</a></td>
+              <td style="font-family:'Open Sans', Arial, sans-serif; font-size:11px; line-height:18px; color:#000000;" valign="top" align="center">© 2019 michaeldennisphotography. All Rights Reserved.</td>
               </tr>
             </tbody></table></td>
           </tr>
           <tr>
-            <td class="em_hide" style="line-height:1px;min-width:700px;background-color:#000000;"><img alt="" src="images/spacer.gif" style="max-height:1px; min-height:1px; display:block; width:700px; min-width:700px;" width="700" border="0" height="1"></td>
+            <td class="em_hide" style="line-height:1px;min-width:700px;background-color:#ffffff;"><img alt="" src="images/spacer.gif" style="max-height:1px; min-height:1px; display:block; width:700px; min-width:700px;" width="700" border="0" height="1"></td>
           </tr>
         </tbody></table></td>
       </tr>
