--- a/html/MichaelDennisPhotographyWhite.html
+++ b/html/MichaelDennisPhotographyWhite.html
@@ -302,7 +302,7 @@
                   <td style="width:6px;" width="6">&nbsp;</td>
                   <td valign="top" align="center"><a href="https://michaeldennisphotography.zenfolio.com/" target="_blank" style="text-decoration:none;"><img src="https://ianconraddennis.github.io/html/1034609.svg" alt="tw" style="display:block; font-family:Arial, sans-serif; font-size:14px; line-height:14px; color:#000000; max-width:27px;" width="27" border="0" height="26"></a></td>
                   <td style="width:6px;" width="6">&nbsp;</td>
-                  <td valign="top" align="center"><a href="mailto:michaeldennisphotography@gmail.com?Subject=Golf%20photo%20inquiry" target="_blank" style="text-decoration:none;"><img src="https://ianconraddennis.github.io/html/35929070-stock-vector-email-icon-on-blue-background-clean-vector.jpg" alt="yt" style="display:block; font-family:Arial, sans-serif; font-size:14px; line-height:14px; color:#000000; max-width:26px;" width="26" border="0" height="26"></a></td>
+                  <td valign="top" align="center"><a href="mailto:michaeldennisphotography@gmail.com?Subject=Golf%20photo%20inquiry" target="_blank" style="text-decoration:none;"><img src="https://ianconraddennis.github.io/html/Mail-128.png" alt="yt" style="display:block; font-family:Arial, sans-serif; font-size:14px; line-height:14px; color:#000000; max-width:26px;" width="26" border="0" height="26"></a></td>
                 </tr>
               </tbody></table></td>
             </tr>
