--- a/html/MichaelDennisPhotographyWhite.html
+++ b/html/MichaelDennisPhotographyWhite.html
@@ -296,13 +296,16 @@
         <tr>
           <td style="padding:38px 30px;" class="em_padd" valign="top" bgcolor="#A9A9A9" align="center"><table width="100%" cellspacing="0" cellpadding="0" border="0" align="center">
             <tbody><tr>
-              <td style="padding-bottom:16px; font-family:'Helvetica Neue'" valign="top" align="center"><table cellspacing="0" cellpadding="0" border="0" align="center">Connect to find out more:<br/>
-                <tbody><tr></tr><tr>
-                  <td valign="top" align="center"><a href="https://www.instagram.com/michaeldennisphotography/" target="_blank" style="text-decoration:none;"><img src="https://ianconraddennis.github.io/html/app-icon2.png" alt="instagram: michaeldennisphotography" style="display:block; font-family:Arial, sans-serif; font-size:14px; line-height:14px; color:#000000; max-width:26px;" width="26" border="0" height="26"></a></td>
-                  <td style="width:6px;" width="6">&nbsp;</td>
-                  <td valign="top" align="center"><a href="https://michaeldennisphotography.zenfolio.com/" target="_blank" style="text-decoration:none;"><img src="https://ianconraddennis.github.io/html/1034609.svg" alt="tw" style="display:block; font-family:Arial, sans-serif; font-size:14px; line-height:14px; color:#000000; max-width:27px;" width="27" border="0" height="26"></a></td>
-                  <td style="width:6px;" width="6">&nbsp;</td>
-                  <td valign="top" align="center"><a href="mailto:michaeldennisphotography@gmail.com?Subject=Golf%20photo%20inquiry" target="_blank" style="text-decoration:none;"><img src="https://ianconraddennis.github.io/html/Mail-128.png" alt="yt" style="display:block; font-family:Arial, sans-serif; font-size:14px; line-height:14px; color:#000000; max-width:26px;" width="26" border="0" height="26"></a></td>
+              <td style="padding-bottom:16px;  font-size:24px; font-family:'Helvetica Neue'" valign="top" align="left"><table cellspacing="0" cellpadding="0" border="0" align="right">Connect to find out more:<br/>
+                <tbody><tr>
+                  <td valign="bottom" style="font-family:'Helvetica Neue'; text-align: right; font-size:12px; line-height:22px; color:#000000; letter-spacing:2px; padding-bottom:12px;" align:"right" ><a align:"right" href="https://www.instagram.com/michaeldennisphotography/" target="_blank"  style="text-decoration:none;color: #000000;">michaeldennisphotography&nbsp;</a></td>
+                  <td valign="top" align="right"><a href="https://www.instagram.com/michaeldennisphotography/" target="_blank" style="text-decoration:none;"><img align="right" src="https://ianconraddennis.github.io/html/app-icon2.png" alt="instagram: michaeldennisphotography" style="display:block; font-family:Arial, sans-serif; font-size:14px; line-height:14px; color:#000000; max-width:26px;" width="26" border="0" height="26"></a></td>
+                  <td style="width:6px;" width="6">&nbsp;</td></tr><tr>
+                  <td valign="bottom" style="font-family:'Helvetica Neue'; text-align: right; font-size:12px; line-height:22px; color:#000000; letter-spacing:2px; padding-bottom:12px;"><a align:"right" href="https://michaeldennisphotography.zenfolio.com/" target="_blank" style="text-decoration:none; color: #000000;">michaeldennisphotography.zenfolio.com&nbsp;</a></td>
+                  <td valign="top" align="right"><a href="https://michaeldennisphotography.zenfolio.com/" target="_blank" style="text-decoration:none;"><img align="right" src="https://ianconraddennis.github.io/html/1034609.svg" alt="tw" style="display:block; font-family:Arial, sans-serif; font-size:14px; line-height:14px; color:#000000; max-width:27px;" width="27" border="0" height="26"></a></td>
+                  <td style="width:6px;" width="6">&nbsp;</td></tr><tr>
+                  <td valign="bottom" style="font-family:'Helvetica Neue'; text-align: right; font-size:12px; line-height:22px; color:#000000; letter-spacing:2px; padding-bottom:12px;"><a href="https://michaeldennisphotography.zenfolio.com/" target="_blank" style="text-decoration:none; color: #000000;">michaeldennisphotography@gmail.com&nbsp;</a></td>
+                  <td valign="top" align="right"><a href="mailto:michaeldennisphotography@gmail.com?Subject=Golf%20photo%20inquiry" target="_blank" style="text-decoration:none;"><img align="right" src="https://ianconraddennis.github.io/html/Mail-128.png" alt="yt" style="display:block; font-family:Arial, sans-serif; font-size:14px; line-height:14px; color:#000000; max-width:26px;" width="26" border="0" height="26"></a></td>
                 </tr>
               </tbody></table></td>
             </tr>
