--- a/html/MichaelDennisPhotographyWhiteCSSinline.html
+++ b/html/MichaelDennisPhotographyWhiteCSSinline.html
@@ -23,12 +23,17 @@
           <!--Banner section-->
           <tr>
             <td valign="top" align="center">
-              <table width="700" height="253" cellspacing="0" cellpadding="0" border="0" align="center" background="https://ianconraddennis.github.io/html/AD15full.jpg">
+              <table width="700" height="233" cellspacing="0" cellpadding="0" border="0" align="center">
                 <tbody><tr>
-                  <td valign="top" align="center">                      
-                      <p style="text-shadow: 4px 4px #000000; position: relative;  text-align: center;  color: white;">GET NOTICED.</p>
-                      <p class="centeredh2" style="text-shadow: 4px 4px #000000;"><br/>Get better imagery.</p>
-                  </td>
+                  <td valign="top" align="center" style="background-image: url('https://ianconraddennis.github.io/html/header.jpg'); background-repeat: no-repeat;">
+                    <table width="700" height="230" cellspacing="0" cellpadding="0" border="0" align="center">
+                      <tbody><tr>
+                        <td valign="top" align="center" style="white-space: nowrap; text-shadow: 4px 4px #000000; position: relative;  text-align: center;  color: white; position: absolute; left: 50%; transform: translate(-50%, -50%); font-family: 'Helvetica Neue'; font-size: 48px; font-style: normal; font-variant: normal; font-weight: 700;">GET NOTICED.
+                        </td>
+                      </tr>
+                      <tr>
+                        <td valign="top" align="center" style="white-space: nowrap; text-shadow: 4px 4px #000000; position: relative;  text-align: center;  color: white; position: absolute; left: 50%; transform: translate(-50%, -50%); font-family: 'Helvetica Neue'; font-size: 32px; font-style: normal; font-variant: normal; font-weight: 500;"><br/>Get better imagery.</p>
+                  </tr></td>
                 </tr>
               </tbody>
             </table>
