--- a/index.html
+++ b/index.html
@@ -61,10 +61,17 @@ and open the template in the editor.
         <div class="col-lg-8 col-lg-offset-2 centered mt">
           <img src="../assets/images/logo.png" alt="Ian"width="100">
           <h1>Hello, I'm Ian Dennis</h1>
-          <p>I am finishing my studies in Computer Engineering Technology at the University of Cincinnati, graduating December of 2016.</p>
-          <p> I am passionate about developing data driven desktop and web applications. I have spent more than three years working in the steel industry as a student developer,
-            with Nucor Steel Gallatin, formerly Gallatin Steel Company.
-            I am looking forward to the opportunities this experience will allow me to have. </p>
+          <p>I am a graduate of the University of Cincinnati with a Bachelor of Science in Computer Engineering Technology. My time on 
+            campus in Clifton helped me grow as both a person and a professional. My semesters spent on COOP in a small town 
+            in Northern Kentucky introduced me to my career in software development.</p>
+          <p>I am passionate about developing data driven desktop and web applications. I currently work with Sugar Creek Packing Company 
+            as their onsite Dynamics AX 2012 Developer. Previously, I worked on the .Net Development Team dealing with their shipping 
+            system. Before that, I had spent more than three years working in the steel industry as a student developer, with Nucor Steel 
+            Gallatin, formerly Gallatin Steel Company.  </p>
+          <p>Working at Sugar Creek has allowed me to chase my passion for baseball as a coach at both the High School and American Legion 
+            level. I knew from the last out of my last game my senior year, that this was a calling for me. It has allowed me to give back 
+            what everyone who stood in the same spot gave to me. The opportunity to share their love for the game that grew mine with young 
+            men in the same area where I grew up is truly fulfilling. </p>
           </div>
         </div>
       </div>
