--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@ and open the template in the editor.
         <div class="col-lg-8 col-lg-offset-2 centered mt">
           <img src="../assets/images/logo.png" alt="Ian"width="100">
           <h1>Hello, I'm Ian Dennis</h1>
-          <p>I am a graduate of the University of Cincinnati with a Bachelor of Science in Computer Engineering Technology. My time on 
-            campus in Clifton helped me grow as both a person and a professional. My semesters spent on COOP in a small town 
+          <p>I am a graduate of the University of Cincinnati with a Bachelor of Science in Computer Engineering Technology. My time in 
+            Clifton helped me grow as both a person and a professional. My semesters spent on COOP in a small town 
             in Kentucky introduced me to my career in software development.</p>
           <p>I am passionate about developing data driven desktop and web applications. I currently work with Sugar Creek Packing Company 
             as their onsite Dynamics AX 2012 Developer. Previously, I worked on the .Net Development Team dealing with their shipping 
